--- a/assets/sass/cmu/cmuStories/modules/_cmuStoriesModule.scss
+++ b/assets/sass/cmu/cmuStories/modules/_cmuStoriesModule.scss
@@ -13,29 +13,38 @@
 // 
 
 .cmuStoryGrid {
-	margin-top: $cmu-vertical-rhythm;
-	$col-count: 3;
-	$col-gap: $cmu-base/2;
+	// margin-top: $cmu-vertical-rhythm;
+	// $col-count: 3;
+	// $col-gap: $cmu-base/2;
 
 	// needs to be responsive
-    -moz-column-count: $col-count;
-    -moz-column-gap: $col-gap;
-    -webkit-column-count: $col-count;
-    -webkit-column-gap: $col-gap;
-    column-count: $col-count;
-    column-gap: $col-gap;
+	// the order is wrong; doesn't work
+    // -moz-column-count: $col-count;
+    // -moz-column-gap: $col-gap;
+    // -webkit-column-count: $col-count;
+    // -webkit-column-gap: $col-gap;
+    // column-count: $col-count;
+    // column-gap: $col-gap;
 }
 
+	// fluidlayout.js target
 	.cmuStoryGrid__item {
 	    display: inline-block;
 	    margin-bottom: $cmu-vertical-rhythm;
-	    width: 100%;
+	    // width: 100%;
+	    // width: 200px;
+	    width: calc((100% - 14px * 3) / 4);
+
+		@include respondTo(xsmall-only) {
+			// regular width, 1 columns / 0 gutters
+			width: calc((100% - 14px * 0) / 1); // technically just 100%
+		}
 	}
 
 .cmuStoryItem {
-	@extend %ease-fast;
-	margin-bottom: $cmu-base;
-	// max-width: 245px;
+	// @extend %ease-fast;
+	// margin-bottom: $cmu-base;
+	// max-width: 200px;
 
 	// Note on how this works:
 	// this value depends on the maxwidth of the page
@@ -45,12 +54,8 @@
 	// (1022 - 14*3) / = 245
 
 	// regular width, 4 columns / 3 gutters
-	max-width: calc((100% - 14px * 3) / 4);
-
-	@include respondTo(xsmall-only) {
-		// regular width, 1 columns / 0 gutters
-		max-width: calc((100% - 14px * 0) / 1); // technically just 100%
-	}
+	// width: calc((100% - 14px * 3) / 4);
+	// width: 200px;
 
 	@extend %style-listItem;
 
